# Borrius-Pokedex-API

./: items.json  pyproject.toml
borrius_pokedex_api/: pokemon_scraper.py
tests/: test_pokemon_scraper.py
