[tool.poetry]
name = "borrius-pokedex-api"
version = "0.1.0"
description = ""
authors = ["nMckenryan <n.mckenryan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
asyncio = "^3.4.3"
aiohttp = "^3.11.6"
pytest = "^8.3.3"
scrapy = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
